// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Class Inheritance > Generates correct output for classes which inherit > # Of Files Generated 1`] = `8`;

exports[`Class Inheritance > Generates correct output for classes which inherit > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: example-module
    items:
    - name: example-module
      href: example-module/example-module.md
    - name: BaseClassWithPrivateConstructor
      href: example-module/BaseClassWithPrivateConstructor.md
    - name: BaseClassWithPublicConstructor
      href: example-module/BaseClassWithPublicConstructor.md
    - name: ChildClassOfPrivateConstructor
      href: example-module/ChildClassOfPrivateConstructor.md
    - name: ChildClassOfPublicConstructor
      href: example-module/ChildClassOfPublicConstructor.md
    - name: NonChildClass
      href: example-module/NonChildClass.md
"
`;

exports[`Class Inheritance > Generates correct output for classes which inherit > msdocs/scriptapi/example-module/BaseClassWithPrivateConstructor.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example-module.BaseClassWithPrivateConstructor Class
description: Contents of the example-module.BaseClassWithPrivateConstructor class.
---
# BaseClassWithPrivateConstructor Class

## Classes that extend BaseClassWithPrivateConstructor
- [*ChildClassOfPrivateConstructor*](ChildClassOfPrivateConstructor.md)
"
`;

exports[`Class Inheritance > Generates correct output for classes which inherit > msdocs/scriptapi/example-module/BaseClassWithPublicConstructor.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example-module.BaseClassWithPublicConstructor Class
description: Contents of the example-module.BaseClassWithPublicConstructor class.
---
# BaseClassWithPublicConstructor Class

## Classes that extend BaseClassWithPublicConstructor
- [*ChildClassOfPublicConstructor*](ChildClassOfPublicConstructor.md)

## Methods
- [constructor](#constructor)

### **constructor**
\`
new BaseClassWithPublicConstructor()
\`

**Returns** [*BaseClassWithPublicConstructor*](BaseClassWithPublicConstructor.md)
"
`;

exports[`Class Inheritance > Generates correct output for classes which inherit > msdocs/scriptapi/example-module/ChildClassOfPrivateConstructor.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example-module.ChildClassOfPrivateConstructor Class
description: Contents of the example-module.ChildClassOfPrivateConstructor class.
---
# ChildClassOfPrivateConstructor Class

## Extends
- [*BaseClassWithPrivateConstructor*](BaseClassWithPrivateConstructor.md)

## Methods
- [constructor](#constructor)

### **constructor**
\`
new ChildClassOfPrivateConstructor()
\`

**Returns** [*ChildClassOfPrivateConstructor*](ChildClassOfPrivateConstructor.md)
"
`;

exports[`Class Inheritance > Generates correct output for classes which inherit > msdocs/scriptapi/example-module/ChildClassOfPublicConstructor.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example-module.ChildClassOfPublicConstructor Class
description: Contents of the example-module.ChildClassOfPublicConstructor class.
---
# ChildClassOfPublicConstructor Class

## Extends
- [*BaseClassWithPublicConstructor*](BaseClassWithPublicConstructor.md)

## Methods
- [constructor](#constructor)

### **constructor**
\`
new ChildClassOfPublicConstructor()
\`

**Returns** [*ChildClassOfPublicConstructor*](ChildClassOfPublicConstructor.md)
"
`;

exports[`Class Inheritance > Generates correct output for classes which inherit > msdocs/scriptapi/example-module/NonChildClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example-module.NonChildClass Class
description: Contents of the example-module.NonChildClass class.
---
# NonChildClass Class

## Methods
- [constructor](#constructor)

### **constructor**
\`
new NonChildClass()
\`

**Returns** [*NonChildClass*](NonChildClass.md)
"
`;

exports[`Class Inheritance > Generates correct output for classes which inherit > msdocs/scriptapi/example-module/example-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example-module Module
description: Contents of the example-module module
---
# \`example-module\` Module

## Manifest Details
\`\`\`json
{
    "module_name": "example-module",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Classes
- [BaseClassWithPrivateConstructor](BaseClassWithPrivateConstructor.md)
- [BaseClassWithPublicConstructor](BaseClassWithPublicConstructor.md)
- [ChildClassOfPrivateConstructor](ChildClassOfPrivateConstructor.md)
- [ChildClassOfPublicConstructor](ChildClassOfPublicConstructor.md)
- [NonChildClass](NonChildClass.md)
"
`;

exports[`Class Inheritance > Generates correct output for classes which inherit > typescript/example-module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "example-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class BaseClassWithPrivateConstructor {
    private constructor();
}

export class BaseClassWithPublicConstructor {}

// @ts-ignore Class inheritance allowed for native defined classes
export class ChildClassOfPrivateConstructor extends BaseClassWithPrivateConstructor {
    constructor();
}

// @ts-ignore Class inheritance allowed for native defined classes
export class ChildClassOfPublicConstructor extends BaseClassWithPublicConstructor {
    constructor();
}

export class NonChildClass {}
"
`;
